# net-packet-coders-test

./: .gitignore  README.md  example_main.cc  test_send.py
.cmake/: CMakeLists.txt
build_deps/log4cpp/: CMakeLists.txt
build_deps/log4cpp/include/log4cpp/: Category.hh  PatternLayout.hh  Priority.hh  PropertyConfigurator.hh  SimpleConfigurator.hh  config-MinGW32.h
build_deps/log4cpp/msvc10/log4cppLIB/: log4cppLIB.vcxproj
build_deps/log4cpp/src/: Category.cpp  PatternLayout.cpp  Priority.cpp  PropertyConfigurator.cpp  PropertyConfiguratorImpl.cpp  PropertyConfiguratorImpl.hh  SimpleConfigurator.cpp
cmake/: CMakeLists.txt  CMakeSettings.json
configs/: log4cpp.properties
include/: enum_str.h
npct/cmd/: cmd.cc  cmd.cpp  cmd.h  cmd.tcc
npct/cmd/impl/: NetPacketCommandLine.cc  NetPacketCommandLine.h  NetPacketMode.cc  NetPacketMode.h
npct/coders/: CoderError.cc  CoderError.h  CoderErrorMessage.h  CoderMessage.h  CoderResultInfo.h  ECoderErrorCodes.h  ICoder.h  ICodersRunner.h
npct/coders/impl/: CodersRunner.cc  CodersRunner.h  NetCodersRunner.cc  NetCodersRunner.h
npct/coders/impl/algo/: CRC32Coder.cc  CRC32Coder.h
npct/coders/impl/algo/crc32/: CRC32Coder.cc  CRC32Coder.h  CRC32InputMessage.h  CRC32OutputMessage.h
npct/coders/impl/algo/hamming/: Hamming.h  Hamming.tcc  HammingCoder.h  HammingCoder.tcc  HammingIOMessage.h
npct/common/: callbacks.h  handlers.h
npct/common/errors/: errors.h
npct/common/helpers/: handler_helpers.h  handler_helpers.tcc
npct/data/: IJsonPacketSupported.h  IJsonSerializable.h  IRawPacketSupported.h  IRawSerializable.h
npct/data/impl/: NTestPacket.h
npct/log/: ILogger.h
npct/log/impl/: GenericLogger.cc  GenericLogger.h  Log4JLogger.cc  Log4JLogger.h
npct/net/: IDataReceiver.h  IPacketReceiver.h  IPeerSession.h
npct/net/impl/: JsonNetReceiver.cc  JsonNetReceiver.h  JsonNetReceiver.tcc  JsonNetSession.h  JsonNetSession.tcc
npct/net/utils/: portable_endian.h  utils.cc  utils.h
npct/utils/: base64.cc  base64.h  binary.cc  binary.h  compile_time.h  hex.cc  hex.h  static_if.h  string.cc  string.h  string_literal.h  utils.cc  utils.h
tests/client/: _test_runner.py  config.py  io.py  test_crc32.py  test_hamming.py  test_lzw.py  test_shannon_fano.py
tests/client/models/: __init__.py
vs/: vs.sln
vs/main/: main.vcxproj  main.vcxproj.filters
